--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -2,7 +2,7 @@
 <ul>
     <% @songs.each do |song| %>
         <li>
-            <%= link_to song.artist.name + " - " + song.title, song %>
+            <%= link_to song.artist_name + " - " + song.title, song %>
         </li>
     <% end %>
 </ul>
