--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @song.title %></h1>
 <p>
-    <%= link_to @song.artist.name, @song.artist %>
+    <%= link_to @song.artist_name, @song.artist %>
 </p>
