--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @artists.each do |a| %>
-    <li>Name: <%= link_to a.name, a %></li>
+    <li>Name: <%= link_to a.name, a %>, <%= a.song_count %> songs</li>
   <% end %>
 </ul>
