--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,3 @@
 <% @songs.each do |s| %>
-  <h3><%= s.artist_name %> - <%= link_to s.title, s %></h3>
+  <h3><%=  link_to "#{s.artist_name} - #{s.title}", s %></h3>
 <% end %>
