--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -6,3 +6,16 @@
 <% end %>
 </ul>
 
+<!-- 
+
+<ul>
+<% @songs.each do |s| %>
+  <h3>
+  <%= link_to s.artist_name, song_path(s) if s.artist %>
+  <%= " - " %>
+  <%= link_to s.title, song_path(s) %>
+  </h3>
+<% end %>
+</ul>
+
+-->
